# cleanse

./: .gitignore  LICENSE  README.md  example.db  package-lock.json  package.json
backend/: database.py  example.db  image_and_name.py  image_to_name.py  llm_stuff.py  main.py  open_food_api.py  pyproject.toml  recommendation.py  server.py  test_recommendation.py
cleanse/: app.json  package-lock.json  package.json
cleanse/app/: _layout.tsx  camera.tsx  index.tsx  routes.ts  users.tsx
cleanse/app/(tabs)/: _layout.tsx  history.tsx  recommendations.tsx
cleanse/app/components/: Button.tsx  Checkbox.tsx  ProductDetailModal.tsx  ProgressSteps.tsx  TextInput.tsx
cleanse/app/context/: UserContext.tsx
cleanse/app/navigation/: AppNavigator.tsx
cleanse/app/screens/: HistoryScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  ProfileSelectionScreen.tsx  RecommendationsScreen.tsx
cleanse/app/screens/survey/: HealthConditionsScreen.tsx  PersonalDetailsScreen.tsx  PreferencesScreen.tsx  SurveyContainer.tsx
cleanse/app/utils/: API_GUIDE.md  api.ts
cleanse/constants/: theme.ts
cleanse/utils/: userStorage.ts
