[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "firecrawl>=1.15.0",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.11",
    "openai>=1.69.0",
    "openfoodfacts>=2.5.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "uvicorn>=0.34.0",
]
